# intro-django

./: .gitignore  pyproject.toml
educational_site/: db.sqlite3  manage.py
educational_site/courses/: admin.py  models.py  urls.py  views.py
educational_site/courses/migrations/: 0001_initial.py  0002_auto_20200423_2316.py
educational_site/courses/templates/courses/: course_list.html
educational_site/educational_site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
educational_site/templates/: base_layout.html  home.html
tests/: test_intro_django.py
