[tool.poetry]
name = "intro_django"
version = "0.1.0"
description = ""
authors = ["owncreed93 <christiantarifer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
